--- a/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
@@ -103,27 +103,48 @@
     </div>
 
     <div class="control-section">
+      <h3>Color Casts (Film-y)</h3>
+      <div class="color-controls">
+        <div class="color-control">
+          <label>Green Shadows</label>
+          <input type="range" id="green-shadows-slider" min="0" max="1" step="0.01" value="0.35">
+          <span class="control-value">0.35</span>
+        </div>
+        <div class="color-control">
+          <label>Magenta Mids</label>
+          <input type="range" id="magenta-mids-slider" min="0" max="1" step="0.01" value="0.18">
+          <span class="control-value">0.18</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="control-section">
       <h3>Effects</h3>
       <div class="bloom-controls">
         <div class="standard-control">
           <label>Bloom Threshold</label>
-          <input type="range" id="bloom-threshold-slider" min="0.5" max="1" step="0.001" value="0.80">
-          <span class="control-value">0.80</span>
+          <input type="range" id="bloom-threshold-slider" min="0.5" max="1" step="0.001" value="0.72">
+          <span class="control-value">0.72</span>
         </div>
         <div class="standard-control">
           <label>Bloom Radius</label>
-          <input type="range" id="bloom-radius-slider" min="1" max="30" step="0.1" value="14.0">
-          <span class="control-value">14.0</span>
+          <input type="range" id="bloom-radius-slider" min="1" max="30" step="0.1" value="16.0">
+          <span class="control-value">16.0</span>
         </div>
         <div class="standard-control">
           <label>Bloom Intensity</label>
-          <input type="range" id="bloom-intensity-slider" min="0" max="1" step="0.01" value="0.50">
-          <span class="control-value">0.50</span>
+          <input type="range" id="bloom-intensity-slider" min="0" max="1" step="0.01" value="0.55">
+          <span class="control-value">0.55</span>
         </div>
         <div class="standard-control">
           <label>Bloom Warmth</label>
-          <input type="range" id="bloom-warm-slider" min="0" max="1" step="0.01" value="0.30">
-          <span class="control-value">0.30</span>
+          <input type="range" id="bloom-warm-slider" min="0" max="1" step="0.01" value="0.35">
+          <span class="control-value">0.35</span>
+        </div>
+        <div class="standard-control">
+          <label>Halation (Red Bleed)</label>
+          <input type="range" id="halation-slider" min="0" max="1" step="0.01" value="0.25">
+          <span class="control-value">0.25</span>
         </div>
       </div>
       <div class="vignette-controls">
@@ -241,8 +262,18 @@
       <div class="mobile-effects-controls">
         <div class="mobile-slider">
           <label>Bloom Intensity</label>
-          <input type="range" id="mobile-bloom-intensity" min="0" max="1" step="0.01" value="0.50">
-          <span class="control-value">0.50</span>
+          <input type="range" id="mobile-bloom-intensity" min="0" max="1" step="0.01" value="0.55">
+          <span class="control-value">0.55</span>
+        </div>
+        <div class="mobile-slider">
+          <label>Halation</label>
+          <input type="range" id="mobile-halation" min="0" max="1" step="0.01" value="0.25">
+          <span class="control-value">0.25</span>
+        </div>
+        <div class="mobile-slider">
+          <label>Green Shadows</label>
+          <input type="range" id="mobile-green-shadows" min="0" max="1" step="0.01" value="0.35">
+          <span class="control-value">0.35</span>
         </div>
         <div class="mobile-slider">
           <label>Vignette</label>
@@ -272,7 +303,7 @@ class XKnob extends HTMLElement{
   constructor(){
     super();
     this._y=null;
-    this.attachShadow({mode:"open"}).innerHTML=`<style>:host{--accent:#ff6a2e;--panel:#171b23;--bg:#0f1318;--size:110px;--track-w:2;--handle-r:6;display:inline-block}.wrap{background:transparent;border:none;padding:0;display:inline-flex;place-items:center}.knob{width:var(--size);height:var(--size);outline:0;cursor:grab;position:relative}.knob:active{cursor:grabbing}svg{width:100%;height:100%;display:block}.base{stroke:rgba(255,106,46,.18);fill:none;stroke-width:var(--track-w);stroke-linecap:round}.prog{stroke:var(--accent);fill:none;stroke-width:var(--track-w);stroke-linecap:round;filter:drop-shadow(0 0 6px rgba(255,106,46,.35))}.handle{fill:var(--accent);filter:drop-shadow(0 0 8px rgba(255,106,46,.35))}.knob:focus-visible{outline:none;box-shadow:0 0 0 4px rgba(255,106,46,.45) inset}:host([disabled]) .knob{opacity:.55;cursor:not-allowed}</style><div class="wrap"><div class="knob" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0"><svg viewBox="0 0 100 100" aria-hidden="true"><path class="base" d=""/><path class="prog" d=""/><circle class="handle" r="var(--handle-r)" cx="0" cy="0"/></svg></div></div>`;
+    this.attachShadow({mode:"open"}).innerHTML=\`<style>:host{--accent:#ff6a2e;--panel:#171b23;--bg:#0f1318;--size:110px;--track-w:2;--handle-r:6;display:inline-block}.wrap{background:transparent;border:none;padding:0;display:inline-flex;place-items:center}.knob{width:var(--size);height:var(--size);outline:0;cursor:grab;position:relative}.knob:active{cursor:grabbing}svg{width:100%;height:100%;display:block}.base{stroke:rgba(255,106,46,.18);fill:none;stroke-width:var(--track-w);stroke-linecap:round}.prog{stroke:var(--accent);fill:none;stroke-width:var(--track-w);stroke-linecap:round;filter:drop-shadow(0 0 6px rgba(255,106,46,.35))}.handle{fill:var(--accent);filter:drop-shadow(0 0 8px rgba(255,106,46,.35))}.knob:focus-visible{outline:none;box-shadow:0 0 0 4px rgba(255,106,46,.45) inset}:host([disabled]) .knob{opacity:.55;cursor:not-allowed}</style><div class="wrap"><div class="knob" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0"><svg viewBox="0 0 100 100" aria-hidden="true"><path class="base" d=""/><path class="prog" d=""/><circle class="handle" r="var(--handle-r)" cx="0" cy="0"/></svg></div></div>\`;
     this.$k=this.shadowRoot.querySelector(".knob");
     this.$base=this.shadowRoot.querySelector(".base");
     this.$prog=this.shadowRoot.querySelector(".prog");
@@ -314,7 +345,7 @@ class XKnob extends HTMLElement{
   _clampSet(v,fire){const nv=Math.min(this._max,Math.max(this._min,this._quantize(v)));this._value=nv;this.setAttribute("value",String(nv));this.$k.setAttribute("aria-valuemin",this._min);this.$k.setAttribute("aria-valuemax",this._max);this.$k.setAttribute("aria-valuenow",nv);this._render();if(fire)this.dispatchEvent(new Event("input"))}
   _render(){const t=(this._value-this._min)/((this._max-this._min)||1);const a0=this._start,a1=this._start+this._sweep,a=a0+t*(a1-a0);const baseD=this._arcPath(50,50,this._r,a0,a1);const progD=this._arcPath(50,50,this._r,a0,a);this.$base.setAttribute("d",baseD);this.$prog.setAttribute("d",progD);const [hx,hy]=this._polar(50,50,this._r,a);this.$handle.setAttribute("cx",hx);this.$handle.setAttribute("cy",hy)}
   _polar(cx,cy,r,deg){const rad=(deg-90)*Math.PI/180;return[cx+r*Math.cos(rad),cy+r*Math.sin(rad)]}
-  _arcPath(cx,cy,r,start,end){const s=this._polar(cx,cy,r,start),e=this._polar(cx,cy,r,end);const large=(end-start)%360>180?1:0;return`M ${s[0]} ${s[1]} A ${r} ${r} 0 ${large} 1 ${e[0]} ${e[1]}`}
+  _arcPath(cx,cy,r,start,end){const s=this._polar(cx,cy,r,start),e=this._polar(cx,cy,r,end);const large=(end-start)%360>180?1:0;return\`M \${s[0]} \${s[1]} A \${r} \${r} 0 \${large} 1 \${e[0]} \${e[1]}\`}
 }
 customElements.define("x-knob",XKnob);
 </script>
