--- a/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
@@ -455,44 +455,145 @@ button:disabled:hover { background: #1f2634; border-color: var(--border); transf
 </div>
 
 <!-- Knob web component -->
+<!-- Knob web component (fixed) -->
 <script>
 class XKnob extends HTMLElement{
   static get observedAttributes(){return["value","min","max","step","disabled"];}
   constructor(){
     super();
     this._y=null;
-    this.attachShadow({mode:"open"}).innerHTML=\`<style>:host{--accent:#ff6a2e;--size:110px;--track-w:2;--handle-r:6;display:inline-block}.wrap{background:transparent;border:none;padding:0;display:inline-flex;place-items:center}.knob{width:var(--size);height:var(--size);outline:0;cursor:grab;position:relative}.knob:active{cursor:grabbing}svg{width:100%;height:100%;display:block}.base{stroke:rgba(255,106,46,.18);fill:none;stroke-width:var(--track-w);stroke-linecap:round}.prog{stroke:var(--accent);fill:none;stroke-width:var(--track-w);stroke-linecap:round;filter:drop-shadow(0 0 6px rgba(255,106,46,.35))}.handle{fill:var(--accent);filter:drop-shadow(0 0 8px rgba(255,106,46,.35))}.knob:focus-visible{outline:none;box-shadow:0 0 0 4px rgba(255,106,46,.45) inset}:host([disabled]) .knob{opacity:.55;cursor:not-allowed}</style><div class="wrap"><div class="knob" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0"><svg viewBox="0 0 100 100" aria-hidden="true"><path class="base" d=""/><path class="prog" d=""/><circle class="handle" r="var(--handle-r)" cx="0" cy="0"/></svg></div></div>\`;
+    this.attachShadow({mode:"open"}).innerHTML=`<style>
+:host{--accent:#ff6a2e;--size:110px;--track-w:2;--handle-r:6;display:inline-block}
+.wrap{background:transparent;border:none;padding:0;display:inline-flex;place-items:center}
+.knob{width:var(--size);height:var(--size);outline:0;cursor:grab;position:relative;touch-action:none;}
+.knob:active{cursor:grabbing}
+svg{width:100%;height:100%;display:block}
+.base{stroke:rgba(255,106,46,.18);fill:none;stroke-width:var(--track-w);stroke-linecap:round}
+.prog{stroke:var(--accent);fill:none;stroke-width:var(--track-w);stroke-linecap:round;filter:drop-shadow(0 0 6px rgba(255,106,46,.35))}
+.handle{fill:var(--accent);filter:drop-shadow(0 0 8px rgba(255,106,46,.35))}
+.knob:focus-visible{outline:none;box-shadow:0 0 0 4px rgba(255,106,46,.45) inset}
+:host([disabled]) .knob{opacity:.55;cursor:not-allowed}
+</style>
+<div class="wrap">
+  <div class="knob" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
+    <svg viewBox="0 0 100 100" aria-hidden="true">
+      <path class="base" d=""/>
+      <path class="prog" d=""/>
+      <circle class="handle" r="var(--handle-r)" cx="0" cy="0"/>
+    </svg>
+  </div>
+</div>`;
     this.$k=this.shadowRoot.querySelector(".knob");
     this.$base=this.shadowRoot.querySelector(".base");
     this.$prog=this.shadowRoot.querySelector(".prog");
     this.$handle=this.shadowRoot.querySelector(".handle");
-    this._min=0; this._max=1; this._step=0.01; this._value=1.0; this._start=-135; this._sweep=270; this._r=42;
+    this._min=0; this._max=1.5; this._step=0.01; this._value=1.0;
+    this._start=-135; this._sweep=270; this._r=42;
   }
   connectedCallback(){
     ["value","min","max","step"].forEach(p=>this._upgrade(p));
     this._clampSet(this._value,false);
-    this.$k.addEventListener("pointerdown",e=>{if(this.disabled)return;this.$k.setPointerCapture(e.pointerId);this._y=e.clientY});
-    addEventListener("pointermove",e=>{if(this._y==null||this.disabled)return;const dy=e.clientY-this._y;this._y=e.clientY;const span=Math.max(20,180);const delta=-(dy/span)*(this._max-this._min);this._clampSet(this._value+this._quantize(delta),true)});
-    addEventListener("pointerup",()=>{if(this._y==null)return;this._y=null;this.dispatchEvent(new Event("change"))});
-    this.$k.addEventListener("wheel",e=>{if(this.disabled)return;e.preventDefault();const dir=e.deltaY<0?1:-1;this._clampSet(this._value+this._step*dir,true);this.dispatchEvent(new Event("change"))},{passive:false});
-    this.$k.addEventListener("keydown",e=>{if(this.disabled)return;const big=(this._max-this._min)/10;let d=0;if(e.key==="ArrowUp"||e.key==="ArrowRight")d=this._step;else if(e.key==="ArrowDown"||e.key==="ArrowLeft")d=-this._step;else if(e.key==="PageUp")d=big;else if(e.key==="PageDown")d=-big;else if(e.key==="Home"){this._clampSet(this._min,true);this.dispatchEvent(new Event("change"));return}else if(e.key==="End"){this._clampSet(this._max,true);this.dispatchEvent(new Event("change"));return}if(d){e.preventDefault();this._clampSet(this._value+d,true);this.dispatchEvent(new Event("change"))}});
-    this.$k.addEventListener("dblclick",()=>{if(this.disabled)return;const dv=this.hasAttribute("default-value")?Number(this.getAttribute("default-value")):(this._min+this._max)/2;this._clampSet(dv,true);this.dispatchEvent(new Event("change"))})
+
+    const onMove = (e)=>{
+      if(this._y==null||this.disabled) return;
+      const dy=e.clientY-this._y; this._y=e.clientY;
+      const span=Math.max(20,180);
+      const delta=-(dy/span)*(this._max-this._min);
+      this._clampSet(this._value+this._quantize(delta),true);
+    };
+    const onUp = ()=>{
+      if(this._y==null) return;
+      this._y=null;
+      this.dispatchEvent(new Event("change"));
+    };
+
+    this.$k.addEventListener("pointerdown",e=>{
+      if(this.disabled) return;
+      e.preventDefault();
+      this.$k.setPointerCapture(e.pointerId);
+      this._y=e.clientY;
+    });
+    // bind to the knob itself (fix)
+    this.$k.addEventListener("pointermove", onMove);
+    this.$k.addEventListener("pointerup", onUp);
+    this.$k.addEventListener("lostpointercapture", onUp);
+
+    this.$k.addEventListener("wheel",e=>{
+      if(this.disabled) return;
+      e.preventDefault();
+      const dir=e.deltaY<0?1:-1;
+      this._clampSet(this._value+this._step*dir,true);
+      this.dispatchEvent(new Event("change"));
+    },{passive:false});
+
+    this.$k.addEventListener("keydown",e=>{
+      if(this.disabled) return;
+      const big=(this._max-this._min)/10;
+      let d=0;
+      if(e.key==="ArrowUp"||e.key==="ArrowRight") d=this._step;
+      else if(e.key==="ArrowDown"||e.key==="ArrowLeft") d=-this._step;
+      else if(e.key==="PageUp") d=big;
+      else if(e.key==="PageDown") d=-big;
+      else if(e.key==="Home"){ this._clampSet(this._min,true); this.dispatchEvent(new Event("change")); return; }
+      else if(e.key==="End"){ this._clampSet(this._max,true); this.dispatchEvent(new Event("change")); return; }
+      if(d){ e.preventDefault(); this._clampSet(this._value+d,true); this.dispatchEvent(new Event("change")); }
+    });
+
+    this.$k.addEventListener("dblclick",()=>{
+      if(this.disabled) return;
+      const dv=this.hasAttribute("default-value")?Number(this.getAttribute("default-value")):(this._min+this._max)/2;
+      this._clampSet(dv,true);
+      this.dispatchEvent(new Event("change"));
+    });
   }
-  get value(){return this._value} set value(v){this._clampSet(Number(v),false)}
+  get value(){return this._value}
+  set value(v){this._clampSet(Number(v),false)}
   get min(){return this._min} set min(v){this._min=Number(v);this._clampSet(this._value,false)}
   get max(){return this._max} set max(v){this._max=Number(v);this._clampSet(this._value,false)}
   get step(){return this._step} set step(v){this._step=Math.max(0.0001,Number(v))}
-  get disabled(){return this.hasAttribute("disabled")} set disabled(v){v?this.setAttribute("disabled",""):this.removeAttribute("disabled")}
-  attributeChangedCallback(n,_,val){if(n==="disabled")return;const num=Number(val);if(n==="value")this.value=num;if(n==="min")this.min=num;if(n==="max")this.max=num;if(n==="step")this.step=num}
-  _upgrade(p){if(this.hasOwnProperty(p)){const v=this[p];delete this[p];this[p]=v}}
-  _quantize(v){const s=this._step;return Math.round(v/s)*s}
-  _clampSet(v,fire){const nv=Math.min(this._max,Math.max(this._min,this._quantize(v)));this._value=nv;this.setAttribute("value",String(nv));this.$k.setAttribute("aria-valuemin",this._min);this.$k.setAttribute("aria-valuemax",this._max);this.$k.setAttribute("aria-valuenow",nv);this._render();if(fire)this.dispatchEvent(new Event("input"))}
-  _render(){const t=(this._value-this._min)/((this._max-this._min)||1);const a0=this._start,a1=this._start+this._sweep,a=a0+t*(a1-a0);const baseD=this._arcPath(50,50,this._r,a0,a1);const progD=this._arcPath(50,50,this._r,a0,a);this.$base.setAttribute("d",baseD);this.$prog.setAttribute("d",progD);const [hx,hy]=this._polar(50,50,this._r,a);this.$handle.setAttribute("cx",hx);this.$handle.setAttribute("cy",hy)}
-  _polar(cx,cy,r,deg){const rad=(deg-90)*Math.PI/180;return[cx+r*Math.cos(rad),cy+r*Math.sin(rad)]}
-  _arcPath(cx,cy,r,start,end){const s=this._polar(cx,cy,r,start),e=this._polar(cx,cy,r,end);const large=(end-start)%360>180?1:0;return\`M \${s[0]} \${s[1]} A \${r} \${r} 0 \${large} 1 \${e[0]} \${e[1]}\`}
+  get disabled(){return this.hasAttribute("disabled")}
+  set disabled(v){v?this.setAttribute("disabled",""):this.removeAttribute("disabled")}
+  attributeChangedCallback(n,_,val){
+    if(n==="disabled")return;
+    const num=Number(val);
+    if(n==="value") this.value=num;
+    if(n==="min")   this.min=num;
+    if(n==="max")   this.max=num;
+    if(n==="step")  this.step=num;
+  }
+  _upgrade(p){ if(this.hasOwnProperty(p)){ const v=this[p]; delete this[p]; this[p]=v; } }
+  _quantize(v){ const s=this._step; return Math.round(v/s)*s; }
+  _clampSet(v,fire){
+    const nv=Math.min(this._max,Math.max(this._min,this._quantize(v)));
+    this._value=nv;
+    this.setAttribute("value",String(nv));
+    this.$k.setAttribute("aria-valuemin",this._min);
+    this.$k.setAttribute("aria-valuemax",this._max);
+    this.$k.setAttribute("aria-valuenow",nv);
+    this._render();
+    if(fire) this.dispatchEvent(new Event("input"));
+  }
+  _render(){
+    const t=(this._value-this._min)/((this._max-this._min)||1);
+    const a0=this._start, a1=this._start+this._sweep, a=a0+t*(a1-a0);
+    const baseD=this._arcPath(50,50,this._r,a0,a1);
+    const progD=this._arcPath(50,50,this._r,a0,a);
+    this.$base.setAttribute("d",baseD);
+    this.$prog.setAttribute("d",progD);
+    const [hx,hy]=this._polar(50,50,this._r,a);
+    this.$handle.setAttribute("cx",hx);
+    this.$handle.setAttribute("cy",hy);
+  }
+  _polar(cx,cy,r,deg){ const rad=(deg-90)*Math.PI/180; return [cx+r*Math.cos(rad), cy+r*Math.sin(rad)]; }
+  _arcPath(cx,cy,r,start,end){
+    const s=this._polar(cx,cy,r,start), e=this._polar(cx,cy,r,end);
+    const large=((end-start)%360>180.0)?1:0;
+    return `M ${s[0]} ${s[1]} A ${r} ${r} 0 ${large} 1 ${e[0]} ${e[1]}`;
+  }
 }
 customElements.define("x-knob",XKnob);
 </script>
+
 
 <!-- Main app -->
 <script type="module">
