chatgpt pro updated deduplicator

--- a/pages/cat.TravelPerks/tp-deal-deduplicator/index.html
+++ b/pages/cat.TravelPerks/tp-deal-deduplicator/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -69,6 +70,11 @@ d	72 Hour Sale-Great Guarantee Rates (P3P): 03/25/2025-03/27/2025
       <div class="actions">
         <button id="copyButton">Copy Non-Matched Deals to Clipboard</button>
       </div>
+    </div>
+
+    <div class="section">
+      <h2>HQ Duplicates (ignored) <span class="count-badge" id="hqDuplicatesCount">0</span></h2>
+      <div id="hqDuplicatesContainer"></div>
     </div>
   </div>
 
